<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lixiaobin.studentapp.Activity.MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:id="@+id/constraintLayout"
            android:background="@drawable/info" tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1" tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1" android:layout_marginBottom="8dp">

    </android.support.constraint.ConstraintLayout>
    <ImageView
            android:layout_width="132dp"
            android:layout_height="132dp" app:srcCompat="@mipmap/ic_launcher_round" android:id="@+id/imageView"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="32dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.14999998"
            tools:ignore="ContentDescription"/>
    <TextView
            android:text="@string/stuname"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:id="@+id/textView" android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginEnd="19dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.383"
            tools:ignore="HardcodedText,RtlHardcoded" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/stusex"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/textView2"
            android:textSize="18sp"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/textView" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView" tools:ignore="HardcodedText"/>
    <TextView
            android:text="@string/major"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/textView3" android:textSize="18sp"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="@+id/textView2"
            android:layout_marginTop="15dp" app:layout_constraintHorizontal_bias="0.0" tools:ignore="HardcodedText"/>
    <TextView
            android:text="@string/stuclass"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/textView5" android:textSize="18sp"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/textView3" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView3" tools:ignore="HardcodedText"/>
    <TextView
            android:layout_width="122dp"
            android:layout_height="24dp"
            android:id="@+id/studentName"
            android:textSize="18sp" tools:layout_constraintTop_creator="1" tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="47dp" app:layout_constraintBottom_toBottomOf="@+id/textView"
            tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/textView" android:layout_marginLeft="47dp"
            app:layout_constraintVertical_bias="1.0" tools:ignore="RtlHardcoded"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/studentSex"
            android:textSize="18sp" tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/studentName" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/studentName" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/studentName"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/studentMajor"
            android:textSize="18sp" tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/studentSex" app:layout_constraintTop_toBottomOf="@+id/studentSex"
            tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="@+id/studentSex"
            android:layout_marginTop="15dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/studentClass"
            android:textSize="18sp" tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/studentMajor" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/studentMajor" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/studentMajor" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="查看更多信息"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/lookMore"
            android:layout_marginRight="0dp" app:layout_constraintRight_toRightOf="@+id/studentClass"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView5"
            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
            tools:text="查看更多信息" android:textColor="@android:color/holo_red_dark" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/studentClass" android:textAllCaps="false"/>
    <Button
            android:text="@string/numSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/numSignButton"
            android:textSize="18sp" android:background="@android:color/holo_green_light"
            android:textColor="@color/font_color_selector"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="@+id/textView"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="@+id/studentName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/lookMore" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/imgSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/imgSignButton"
            android:textSize="18sp"
            android:background="@android:color/holo_green_light"
            android:textColor="@color/font_color_selector"
            app:layout_constraintTop_toBottomOf="@+id/numSignButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.099"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/numSignButton"
            android:layout_marginRight="0dp" app:layout_constraintRight_toRightOf="@+id/numSignButton"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="256dp"
            android:layout_height="334dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:id="@+id/deliInfo"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:text="@string/joinyear" tools:ignore="HardcodedText,RtlHardcoded"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="22dp" android:id="@+id/joinyearText"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" tools:ignore="MissingConstraints"
                app:layout_constraintLeft_toRightOf="@+id/textView6" android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp" app:layout_constraintRight_toRightOf="parent"/>
    <TextView
            android:text="@string/stuyear"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/textView9" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintLeft_toLeftOf="@+id/textView6"
            app:layout_constraintRight_toRightOf="@+id/textView6" android:textSize="18sp" tools:ignore="HardcodedText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/stuyearText"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="@+id/joinyearText"
            app:layout_constraintLeft_toLeftOf="@+id/joinyearText" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/joinyearText" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/textView4" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintLeft_toLeftOf="@+id/textView9"
            app:layout_constraintRight_toRightOf="@+id/textView9" android:text="@string/phone" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="HardcodedText,RtlHardcoded"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:id="@+id/phoneText" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/stuyearText"
            app:layout_constraintRight_toRightOf="@+id/stuyearText"
            app:layout_constraintLeft_toLeftOf="@+id/stuyearText" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="RtlHardcoded" android:layout_marginLeft="0dp"/>
    <TextView
            android:text="@string/emile"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/textView8" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="@+id/textView4" android:textSize="18sp" tools:ignore="HardcodedText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_height="48dp" android:id="@+id/emileText"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/phoneText"
            app:layout_constraintRight_toRightOf="@+id/phoneText"
            app:layout_constraintLeft_toLeftOf="@+id/phoneText"
            android:textSize="18sp" android:inputType="textMultiLine" tools:ignore="TextViewEdits"
            android:layout_width="0dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/changeInfo"
            app:layout_constraintRight_toRightOf="@+id/emileText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emileText"
            app:layout_constraintLeft_toLeftOf="@+id/textView8" android:text="修改信息" tools:ignore="HardcodedText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/returnSign"
            android:text="返回签到" tools:ignore="HardcodedText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/changeInfo" android:layout_marginRight="-1dp"
            app:layout_constraintRight_toRightOf="@+id/changeInfo"
            android:layout_marginLeft="0dp" app:layout_constraintLeft_toLeftOf="@+id/changeInfo"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
